pre-meeting 9 ups

--- a/similarity-and-LTL.ipynb
+++ b/similarity-and-LTL.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -472,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -492,60 +492,143 @@
     "            \n",
     "            if i != j: #no repeats\n",
     "                candidate = until_N(trace, [labels[i]], [labels[j]], 50) #cap at 50\n",
+    "                sub_convos[\"{0} -> {1}\".format(labels[i], labels[j])] = [0,[]] #record all possible\n",
     "                \n",
     "                for item in candidate:\n",
     "                    if item[3] > 10 and item [3] < l and item[2] < item[3]*c_cap:\n",
-    "                        try:\n",
-    "                            sub_convos[\"{0} -> {1}\".format(labels[i], labels[j])] += 1\n",
-    "                        except:\n",
-    "                            sub_convos[\"{0} -> {1}\".format(labels[i], labels[j])] = 1\n",
-    "    \n",
-    "    return sub_convos\n",
+    "                        sub_convos[\"{0} -> {1}\".format(labels[i], labels[j])][0] += 1\n",
+    "                        sub_convos[\"{0} -> {1}\".format(labels[i], labels[j])][1].append(item)\n",
     "\n",
-    "#modify the function to find all relevant sub-conversations in a trace\n",
-    "def compare_sub_conversations (trace1, trace2, labels, c_cap, l):\n",
-    "    assert type(trace1) == list\n",
-    "    assert type(trace2) == list\n",
-    "    assert type(labels) == list\n",
-    "    assert type(c_cap) == float\n",
-    "    assert type(l) == int\n",
+    "    return sub_convos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#weighting function\n",
+    "def calc_weights(trace, sub_convos):\n",
     "    \n",
-    "    #counts\n",
-    "    sub_convos1 = {}\n",
-    "    sub_convos2 = {}\n",
+    "    assert type(trace) == list #takes a list of traces, i.e: event log\n",
     "    \n",
-    "    #cycle through label pairs\n",
-    "    for i in range(len(labels)):\n",
-    "        for j in range(len(labels)):\n",
+    "    tw_id = {}\n",
+    "    center = len(trace)//2\n",
+    "    tf = {}\n",
+    "    idf = {}\n",
+    "    N = 0 #track number of sub_convos\n",
+    "\n",
+    "    #instantiate tf and idf values\n",
+    "    for i in range(len(trace)):\n",
+    "        tf[i] = 0\n",
+    "        idf[i] = 0\n",
+    "\n",
+    "    #find non-zero from sub_convos table to fill tf and idf table\n",
+    "    for key in list(sub_convos.keys()):\n",
+    "        if sub_convos[key][0] != 0:\n",
+    "            N += 1\n",
+    "            for entry in sub_convos[key][1]: #for each entry\n",
+    "                s = entry[0]\n",
+    "                e = entry[1]\n",
+    "                label1, label2 = key.split(\" -> \")\n",
+    "\n",
+    "                for i in range(s,e):\n",
+    "                    if trace[i] == label1 or trace[i] == label2:\n",
+    "                        tf[i] += 1\n",
+    "                    else:\n",
+    "                        idf[i] += 1\n",
+    "\n",
+    "    #apply log onto idf vals\n",
+    "    for i in range(len(idf)):\n",
+    "        try:\n",
+    "            if idf[i] == 0:\n",
+    "                idf[i] = 0\n",
+    "            else:\n",
+    "                idf[i] = np.log2(N/idf[i])\n",
+    "        except:\n",
+    "            idf[i] = 0\n",
+    "\n",
+    "    #calculate weights\n",
+    "    for i in range(len(trace)):\n",
+    "        if center == i:\n",
+    "            tw_id[i] = 1 + (tf[i]*idf[i]) #center\n",
+    "        else:\n",
+    "            tw_id[i] = (1/np.abs(center-i)) + (tf[i]*idf[i]) #w_i + tf-idf(a_i)\n",
+    "\n",
+    "    #convert to list\n",
+    "    trace_weights = []\n",
+    "    for k in list(tw_id.keys()):\n",
+    "        trace_weights.append(tw_id[k])\n",
+    "        \n",
+    "    return trace_weights"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#function for similarity score via weights\n",
+    "def weight_similarity (trace1, trace2):\n",
+    "    \n",
+    "    assert type(trace1) == type(trace2) == list\n",
+    "    \n",
+    "    #pad traces\n",
+    "    trace1 = [\"_\"] + trace1\n",
+    "    trace2 = [\"_\"] + trace2\n",
+    "    \n",
+    "    #set shorter one as tr1\n",
+    "    if len(trace1) > len(trace2):\n",
+    "        copy = trace1\n",
+    "        trace1 = trace2\n",
+    "        trace2 = copy\n",
+    "\n",
+    "    M = len(trace1)\n",
+    "    N = len(trace2)\n",
+    "    sim_table = np.zeros((M,N)) #establish table\n",
+    "    labels = define_symbols([trace1, trace2])\n",
+    "    weights1 = calc_weights(trace1, find_sub_conversations(trace1, labels, 0.3, 30)) #establish weights\n",
+    "    weights2 = calc_weights(trace2, find_sub_conversations(trace2, labels, 0.3, 30))\n",
+    "    \n",
+    "    #fill table, horizontal -> vertical\n",
+    "    for i in range(M):\n",
+    "        for j in range(N):\n",
     "            \n",
-    "            if i != j: #no repeats\n",
-    "                candidate = until_N(trace1, [labels[i]], [labels[j]], 50)\n",
-    "                sub_convos1[\"{0} -> {1}\".format(labels[i], labels[j])] = 0\n",
+    "            #original fill horizontal\n",
+    "            if i == 0:\n",
+    "                if j == 0: #first fill\n",
+    "                    sim_table[i][j] = 1000\n",
+    "                elif j == 1: #first insert\n",
+    "                    sim_table[i][j] = weights2[j]\n",
+    "                else: #rest fill, base insert scores\n",
+    "                    sim_table[i][j] = weights2[j] + sim_table[i][j-1]\n",
+    "            \n",
+    "            #original fill vertical\n",
+    "            elif j == 0:\n",
+    "                if i == 0:#first fill\n",
+    "                    sim_table[i][j] = 1000\n",
+    "                elif i == 1:\n",
+    "                    sim_table[i][j] = weights1[i]\n",
+    "                else: #rest fill, base is the opposite of insert scores\n",
+    "                    sim_table[i][j] = -weights1[i] + sim_table[i-1][j]\n",
+    "            \n",
+    "            elif trace1[i] == trace2[j]: #no changes\n",
+    "                sim_table[i][j] = sim_table[i-1][j-1]\n",
+    "            \n",
+    "            else: #substitution, insertion or deletion\n",
     "                \n",
-    "                for item in candidate:\n",
-    "                    if item[3] > 10 and item [3] < l and item[2] < item[3]*c_cap:\n",
-    "                        sub_convos1[\"{0} -> {1}\".format(labels[i], labels[j])] += 1\n",
-    "    \n",
-    "    #do for second trace\n",
-    "    for i in range(len(labels)):\n",
-    "        for j in range(len(labels)):\n",
-    "\n",
-    "            if i != j: #no repeats\n",
-    "                candidate = until_N(trace2, [labels[i]], [labels[j]], 50)\n",
-    "                sub_convos2[\"{0} -> {1}\".format(labels[i], labels[j])] = 0\n",
-    "\n",
-    "                for item in candidate:\n",
-    "                    if item[3] > 10 and item [3] < l and item[2] < item[3]*c_cap:\n",
-    "                        sub_convos2[\"{0} -> {1}\".format(labels[i], labels[j])] += 1\n",
-    "    \n",
-    "    #compare and give summary report\n",
-    "    report = {}\n",
-    "    report_total = 0\n",
-    "    for key in list(sub_convos1.keys()):\n",
-    "        report[key] = np.abs(sub_convos1[key]-sub_convos2[key])\n",
-    "        report_total += report[key]\n",
-    "    \n",
-    "    return report, report_total"
+    "                #determine the max\n",
+    "                op = np.argmax([sim_table[i-1][j], sim_table[i][j-1], sim_table[i-1][j-1]]) #in order, removal, insertion, substitution\n",
+    "                if op == 0:\n",
+    "                    sim_table[i][j] = -weights1[i] + sim_table[i-1][j] #removal\n",
+    "                elif op == 1:\n",
+    "                    sim_table[i][j] = weights2[j] + sim_table[i][j-1] #insertion\n",
+    "                elif op == 2:\n",
+    "                    sim_table[i][j] = -weights1[i]+weights2[j] + sim_table[i-1][j-1] #substitution\n",
+    "                \n",
+    "    return sim_table[i][j] #final score"
    ]
   },
   {
@@ -570,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -579,7 +662,7 @@
        "array([0, 0, 1])"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -597,17 +680,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/kense/.local/lib/python3.6/site-packages/ipykernel_launcher.py:108: RuntimeWarning: divide by zero encountered in log2\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "a = [\"a\",\"b\",\"b\",\"a\",\"b\",\"b\",\"a\",\"c\"]\n",
     "b = [\"b\",\"a\",\"a\",\"b\",\"a\",\"a\",\"b\",\"c\"]\n",
@@ -626,20 +701,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0, 1, 0])"
-      ]
-     },
-     "execution_count": 40,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "clusters = AgglomerativeClustering(affinity=\"precomputed\", linkage=\"average\").fit(dis_mat)\n",
     "clusters.labels_"
@@ -647,29 +711,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[0.0005    , 0.0005007 , 0.00050052],\n",
-       "       [0.0005007 , 0.0005    , 0.00100173],\n",
-       "       [0.00050061, 0.00050072, 0.0005    ]])"
-      ]
-     },
-     "execution_count": 41,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "dis_mat"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -684,7 +735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -693,7 +744,22 @@
      "text": [
       "/home/kense/.local/lib/python3.6/site-packages/ipykernel_launcher.py:108: RuntimeWarning: divide by zero encountered in log2\n"
      ]
-    },
+    }
+   ],
+   "source": [
+    "#data set up\n",
+    "eventlog = [test1,test2,test3]\n",
+    "scost = sub_scores(eventlog)\n",
+    "icost = insert_scores(eventlog)\n",
+    "prob = rgl_prob(eventlog)\n",
+    "dis_mat = np.zeros((len(eventlog), len(eventlog)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
@@ -706,12 +772,7 @@
     }
    ],
    "source": [
-    "eventlog = [test1,test2,test3]\n",
-    "scost = sub_scores(eventlog)\n",
-    "icost = insert_scores(eventlog)\n",
-    "prob = rgl_prob(eventlog)\n",
-    "dis_mat = np.zeros((len(eventlog), len(eventlog)))\n",
-    "\n",
+    "#clustering on similarity values only\n",
     "for i in range(len(eventlog)):\n",
     "    for j in range(len(eventlog)):\n",
     "        dis_mat[i][j] = 1/(1000+calc_similarity(eventlog[i],eventlog[j], scost, icost, prob))\n",
@@ -723,12 +784,64 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.0005     0.00049357 0.00049775]\n",
+      " [0.00049357 0.0005     0.00049805]\n",
+      " [0.00049775 0.00049805 0.0005    ]]\n",
+      "[0 0 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#clustering on weighting values only\n",
+    "for i in range(len(eventlog)):\n",
+    "    for j in range(len(eventlog)):\n",
+    "        dis_mat[i][j] = 1/(1000+weight_similarity(eventlog[i], eventlog[j]))\n",
+    "\n",
+    "print(dis_mat)\n",
+    "clusters = AgglomerativeClustering(affinity=\"precomputed\", linkage=\"average\").fit(dis_mat)\n",
+    "print(clusters.labels_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.0005     0.00071386 0.00129973]\n",
+      " [0.00071386 0.0005     0.00188994]\n",
+      " [0.00129973 0.00188994 0.0005    ]]\n",
+      "[0 0 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#clustering on similarity and weighting values together\n",
+    "for i in range(len(eventlog)):\n",
+    "    for j in range(len(eventlog)):\n",
+    "        dis_mat[i][j] = 1/(calc_similarity(eventlog[i],eventlog[j], scost, icost, prob)+weight_similarity(eventlog[i], eventlog[j]))\n",
+    "\n",
+    "print(dis_mat)\n",
+    "clusters = AgglomerativeClustering(affinity=\"precomputed\", linkage=\"average\").fit(dis_mat)\n",
+    "print(clusters.labels_)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "#weighting values\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
