pre-meeting 12 ups

--- a/similarity-and-LTL.ipynb
+++ b/similarity-and-LTL.ipynb
@@ -653,6 +653,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#using sklearn\n",
+    "from sklearn.cluster import AgglomerativeClustering"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
    "outputs": [
@@ -668,9 +678,6 @@
     }
    ],
    "source": [
-    "#using sklearn\n",
-    "from sklearn.cluster import AgglomerativeClustering\n",
-    "\n",
     "#sample 3 by 3 clustering\n",
     "dis_mat = np.array([[0,1,2],[1,0,3],[2,3,0]])\n",
     "\n",
@@ -870,7 +877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -907,7 +914,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -922,42 +929,30 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 2.00000000e-03  3.80073943e-03 -1.17960544e-02  2.25271946e-03\n",
-      "  -4.39417380e-02  4.14617921e-03 -5.10284276e-02  3.97296235e-03\n",
-      "   2.76698544e-03 -9.00877504e-04  7.11852480e-05  3.96019786e-04]\n",
-      " [ 3.80073943e-03  2.00000000e-03 -1.24138218e-03  4.24265491e-03\n",
-      "  -5.58178356e-03  5.94411037e-03 -4.42770798e-02  5.63144236e-03\n",
-      "   3.60302570e-03 -5.08419993e-04  6.60106103e-05  4.33311792e-04]\n",
-      " [-1.17960544e-02 -1.24138218e-03  2.00000000e-03  4.87641822e-02\n",
-      "  -1.31100691e-04 -1.24269294e-03  1.85988411e-01 -1.00557348e-03\n",
-      "  -2.55813288e-03 -4.90262435e-04  1.29889627e-05  4.63684902e-04]\n",
-      " [ 2.25271946e-03  4.24265491e-03  4.87641822e-02  2.00000000e-03\n",
-      "  -2.41925032e-03  5.02798411e-03  2.01925482e-02  4.14620166e-03\n",
-      "  -4.95853368e-04 -1.00657732e-03 -4.34778899e-06  3.83385170e-04]\n",
-      " [-4.39417380e-02 -5.58178356e-03 -1.31100691e-04 -2.41925032e-03\n",
-      "   2.00000000e-03 -1.23215525e-03  9.51066800e-05 -1.21956189e-03\n",
-      "  -2.57615760e-03  6.09536158e-04  4.66109545e-04  7.45209719e-04]\n",
-      " [ 4.14617921e-03  5.94411037e-03 -1.24269294e-03  5.02798411e-03\n",
-      "  -1.23215525e-03  2.00000000e-03  1.15436647e-02  6.63719967e-03\n",
-      "  -3.76661782e-04 -8.10401756e-04  7.19311221e-05  4.08232827e-04]\n",
-      " [-5.10284276e-02 -4.42770798e-02  1.85988411e-01  2.01925482e-02\n",
-      "   9.51066800e-05  1.15436647e-02  2.00000000e-03  1.22882945e-02\n",
-      "   1.61325993e-02 -1.98223743e-03 -7.45528527e-05  2.01349981e-04]\n",
-      " [ 3.97296235e-03  5.63144236e-03 -1.00557348e-03  4.14620166e-03\n",
-      "  -1.21956189e-03  6.63719967e-03  1.22882945e-02  2.00000000e-03\n",
-      "   3.03381581e-03 -4.24026627e-04 -1.60956644e-05  4.32714549e-04]\n",
-      " [ 2.76698544e-03  3.60302570e-03 -2.55813288e-03 -4.95853368e-04\n",
-      "  -2.57615760e-03 -3.76661782e-04  1.61325993e-02  3.03381581e-03\n",
-      "   2.00000000e-03 -9.00109561e-04  1.03342506e-05  3.85115205e-04]\n",
-      " [-9.00877504e-04 -5.08419993e-04 -4.90262435e-04 -1.00657732e-03\n",
-      "   6.09536158e-04 -8.10401756e-04 -1.98223743e-03 -4.24026627e-04\n",
-      "  -9.00109561e-04  2.00000000e-03  2.53698380e-02 -1.79017041e-04]\n",
-      " [ 7.11852480e-05  6.60106103e-05  1.29889627e-05 -4.34778899e-06\n",
-      "   4.66109545e-04  7.19311221e-05 -7.45528527e-05 -1.60956644e-05\n",
-      "   1.03342506e-05  2.53698380e-02  2.00000000e-03  3.04785889e-04]\n",
-      " [ 3.96019786e-04  4.33311792e-04  4.63684902e-04  3.83385170e-04\n",
-      "   7.45209719e-04  4.08232827e-04  2.01349981e-04  4.32714549e-04\n",
-      "   3.85115205e-04 -1.79017041e-04  3.04785889e-04  2.00000000e-03]]\n"
+      "[[ 0.001       0.00271895 -0.05061923  0.00123218 -0.01784625  0.0032171\n",
+      "  -0.01228942  0.00310077  0.00181473 -0.00216973 -0.00106678 -0.00086612]\n",
+      " [ 0.00271895  0.001      -0.00214716  0.00340364 -0.00491825  0.00594171\n",
+      "  -0.0110534   0.00535783  0.00296939 -0.00171393 -0.00107786 -0.00084359]\n",
+      " [-0.05061923 -0.00214716  0.001       0.00973397 -0.00108287 -0.00210684\n",
+      "  -0.04349347 -0.00188369 -0.00341873 -0.00156177 -0.0012767  -0.00069884]\n",
+      " [ 0.00123218  0.00340364  0.00973397  0.001      -0.00361074  0.00416336\n",
+      "  -0.1910642   0.00309811  0.00297187 -0.00243305 -0.00128869 -0.0009163 ]\n",
+      " [-0.01784625 -0.00491825 -0.00108287 -0.00361074  0.001      -0.00202098\n",
+      "  -0.00087912 -0.00197835 -0.00304066 -0.00037938 -0.00056898 -0.00029519]\n",
+      " [ 0.0032171   0.00594171 -0.00210684  0.00416336 -0.00202098  0.001\n",
+      "   0.03215258  0.00680048 -0.00127951 -0.00205533 -0.00106747 -0.0008138 ]\n",
+      " [-0.01228942 -0.0110534  -0.04349347 -0.1910642  -0.00087912  0.03215258\n",
+      "   0.001       0.03992798 -0.19920263 -0.00369121 -0.00123026 -0.00150051]\n",
+      " [ 0.00310077  0.00535783 -0.00188369  0.00309811 -0.00197835  0.00680048\n",
+      "   0.03992798  0.001       0.0022457  -0.0016449  -0.00116377 -0.00090936]\n",
+      " [ 0.00181473  0.00296939 -0.00341873  0.00297187 -0.00304066 -0.00127951\n",
+      "  -0.19920263  0.0022457   0.001      -0.00230626 -0.00119393 -0.0010288 ]\n",
+      " [-0.00216973 -0.00171393 -0.00156177 -0.00243305 -0.00037938 -0.00205533\n",
+      "  -0.00369121 -0.0016449  -0.00230626  0.001       0.00354781 -0.01424706]\n",
+      " [-0.00106678 -0.00107786 -0.0012767  -0.00128869 -0.00056898 -0.00106747\n",
+      "  -0.00123026 -0.00116377 -0.00119393  0.00354781  0.001      -0.00176567]\n",
+      " [-0.00086612 -0.00084359 -0.00069884 -0.0009163  -0.00029519 -0.0008138\n",
+      "  -0.00150051 -0.00090936 -0.0010288  -0.01424706 -0.00176567  0.001     ]]\n"
      ]
     }
    ],
@@ -974,27 +969,27 @@
     "#create distance matrix for clustering\n",
     "for i in range(len(eventlog)):\n",
     "    for j in range(len(eventlog)):\n",
-    "        dis_mat[i][j] = (1/calc_similarity(eventlog[i],eventlog[j], scost, icost, prob))+(1/weight_similarity(eventlog[i], eventlog[j]))\n",
+    "        dis_mat[i][j] = (1/calc_similarity(eventlog[i],eventlog[j], scost, icost, prob))\n",
     "\n",
     "print(dis_mat)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Cluster result: [0 0 0 0 0 4 0 3 0 0 1 2]\n"
+      "Cluster result: [0 0 0 0 0 3 0 4 0 1 2 1]\n"
      ]
     }
    ],
    "source": [
     "#clustering and consider results\n",
-    "clusters = AgglomerativeClustering(n_clusters=5, affinity=\"precomputed\", linkage=\"single\").fit(dis_mat)\n",
+    "clusters = AgglomerativeClustering(n_clusters=5, affinity=\"precomputed\", linkage=\"average\").fit(dis_mat)\n",
     "print(\"Cluster result: {0}\".format(clusters.labels_))"
    ]
   },
